--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -13,12 +13,12 @@
     padding: 10px;
     align-items: center;
 }
-.log{
+.logo{
     width:50px;
     height: 50px;
     object-fit: contain;
 }
-.right__nav{
+.right__nav > ul{
     display: flex;
     list-style-type: none;
     padding-right: 10px;
