--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -2,21 +2,26 @@
     margin:0;
     padding: 0;
 }
+body{
+    background-color: whitesmoke;
+}
 .nav__bar{
     display:flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color: black;
+    background-color: lawngreen;
 }
 .left__nav{
     width: 50%;
     padding: 10px;
     align-items: center;
+
 }
 .logo{
     width:50px;
     height: 50px;
     object-fit: contain;
+    justify-content: left;
 }
 .right__nav > ul{
     display: flex;
@@ -28,5 +33,15 @@
 }
 .right__nav > ul >li > a {
     text-decoration: none;
-    color: whitesmoke;
+    color: black;
+}
+#sign-up{
+    width: 60rem;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 40rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
