--- a/asset/css/index.css
+++ b/asset/css/index.css
@@ -2,14 +2,18 @@
     margin:0;
     padding: 0;
 }
+html{
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
 body{
-    background-color: whitesmoke;
+    background-color: black;
 }
 .nav__bar{
     display:flex;
     align-items: center;
     justify-content: space-evenly;
-    background-color: lawngreen;
+    background-color: rgb(98, 0, 255);
 }
 .left__nav{
     width: 50%;
@@ -29,19 +33,96 @@ body{
     padding-right: 10px;
 }
 .right__nav >ul > li{
-    padding: 10px;
+    padding: 20px;
 }
 .right__nav > ul >li > a {
     text-decoration: none;
-    color: black;
+    color: white;
+    font-size: 24px;
+    font-weight: bold;
 }
-#sign-up{
-    width: 60rem;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 40rem;
+/* landing page styles */
+.landing__page{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+}
+.right__landingpage{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+.right__landingpage > h1{
+    color: white;
+    font-size: xx-large;
+    padding: 30px;
+}
+.right__landingpage > h1 > em{
+    color: blue;
+    padding-top: 20px;
+}
+.btn{
+    width: 50%;
+    padding: 10px;
+    background-color: rgb(98, 0, 255);
+    border: none;
+    border-radius: 15px;
+    font-size: larger;
+}
+.btn >p{
+    color: white;
+}
+h2, h3{
+    color: white;
+}
+.certificates{
+    display: flex;
+    padding: 10px;
+    align-items: center;
+}
+#certsImage{
+    width: 400px;
+    object-fit: contain;
+}
+.contact{
+    background-color: rgb(98, 0, 255);
+}
+.form{
+    max-width: 320px;
+    
+
+}
+.form > lable {
+     display: block;
+
+}
+input[type="text"],
+input[type="email"],
+input[type="text"],
+textarea,
+fieldset {
+  width : 100%;
+  height: 2rem;
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+input:invalid {
+    box-shadow: 0 0 5px 1px red;
+  }
+  
+  input:focus:invalid {
+    box-shadow: none;
+  }
+  /* certificates page */
+.certificates{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.certificates > div > img{
+    width: 400px;
 }
